Attempting to correct div scrolling issue on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -127,6 +127,7 @@ body {
     box-shadow: 5px 5px 5px #00000044;
     max-height: var(--height);
     overflow-y: auto;
+    -webkit-overflow-scrolling: auto;
 }
 
 .profile {
